# PFEM3D

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  README.md
bc/2D/: concentricCylinder.lua  pipe.lua  pipeComp.lua  square_disk_diskInFluid.lua  square_disk_diskInFluidComp.lua
bc/3D/: damBreakKoshizukaComp.lua  pipe.lua  pipeComp.lua  square.lua
examples/2D/UniformRisingCylinder/: testPfemCylinderRise.geo
examples/2D/ballInFluid/: IBC_Comp.lua  IBC_Incomp.lua  geometry_coarse.geo  paramsComp.json  paramsIncomp.json  testComp.lua  testIncomp.lua
examples/2D/concentricCylinder/: IBC_Comp.lua  paramsComp.json  paramsIncomp.json
examples/2D/conduction/: IBC_Incomp.lua  geometry.geo  paramsIncomp.json  testIncomp.lua
examples/2D/coolingBallInFluid/: IBC_Incomp.lua  geometry.geo  paramsIncomp.json  testComp.lua  testIncomp.lua
examples/2D/damBreakKoshizuka/: IBC_Comp.lua  geometry.geo  paramsComp.json  paramsIncomp.json  testComp.lua  testIncomp.lua
examples/2D/damBreakWithObstacle/: geometry.geo  paramsComp.json  paramsIncomp.json  testComp.lua  testIncomp.lua
examples/2D/dropFall/: IBC_Incomp.lua  geometry.geo  paramsComp.json  paramsIncomp.json  testComp.lua  testIncomp.lua
examples/2D/dropFallInFluid/: IBC_Comp.lua  geometry.geo  paramsComp.json  paramsIncomp.json  testComp.lua  testIncomp.lua
examples/2D/hydrostatic/: IBC_Comp.lua  geometry.geo  paramsComp.json  paramsIncomp.json  testComp.lua  testIncomp.lua
examples/2D/nonUniformRisingCylinder/: geometry.geo  testIncomp.lua
examples/2D/pipe/: IBC_Comp.lua  IBC_Incomp.lua  geometry.geo  paramsComp.json  paramsIncomp.json  script.py  testComp.lua
examples/2D/rayleigh/: IBC_Comp.lua  IBC_Comp2.lua  IBC_Incomp.lua  geometry.geo  paramsComp.json  paramsComp2.json  paramsIncomp.json  testComp.lua  testIncomp.lua
examples/2D/sloshing/: paramsComp.json  paramsIncomp.json  testComp.lua  testIncomp.lua
examples/2D/squareToDisk/: IBC_Incomp.lua  geometry.geo  paramsIncomp.json  testIncomp.lua
examples/2D/thermalConv/: IBC_Incomp.lua  geometry.geo  paramsIncomp.json  testComp.lua  testIncomp.lua
examples/3D/cubeToSphere/: IBC_Incomp.lua  geometry.geo  paramsIncomp.json  testIncomp.lua
examples/3D/damBreakKoshizuka/: IBC_Comp.lua  IBC_Incomp.lua  geometry.geo  paramsComp.json  paramsIncomp.json  testComp.lua  testIncomp.lua
examples/3D/dropFallInFluid/: IBC_Comp.lua  IBC_Incomp.lua  geometry.geo  paramsComp.json  paramsIncomp.json  testComp.lua  testIncomp.lua
examples/3D/pipe/: IBC_Comp.lua  IBC_Incomp.lua  geometry.geo  paramsComp.json  paramsIncomp.json  testComp.lua  testIncomp.lua
examples/3D/rayleigh/: IBC_Comp.lua  IBC_Incomp.lua  geometry.geo  paramsComp.json  paramsIncomp.json  testComp.lua  testIncomp.lua
geometry/: damBreakKoshizuka.geo  diskInFluid.geo  pipe.geo  square.geo
geometry/2D/: ballInFluid.geo  concentricCylinder.geo  damBreakKoshizuka.geo  disk.geo  pipe.geo  sloshing.geo  square.geo
geometry/3D/: drop.geo  pipe.geo  square.geo  square3D.geo
ibc/2D/: ballInFluid.lua  ballInFluidComp.lua  concentricCylinder.lua
params/: params.json  paramsDamBreakKoshizuka.json  paramsPipe.json  paramsSquareDiskHydroStatic.json  paramsSquareDiskHydroStaticComp.json
params/2D/: ballInFluid.json  ballInFluidComp.json  concentricCylinder.json  concentricCylinderComp.json  damBreakKoshizuka.json  damBreakKoshizukaComp.json  paramsPipe.json  paramsSquare.json  paramsSquareComp.json  pipe.json  pipeComp.json  sloshing.json  sloshingComp.json  square_disk_diskInFluid.json  square_disk_diskInFluid_comp.json
params/3D/: damBreakKoshizuka.json  damBreakKoshizukaComp.json  diskInFluid.json  diskInFluidComp.json  pipe.json  pipeComp.json  square.json  squareComp.json
run/DRAGON2/: compile.sh  slurm.sh
run/Fabulous/: compile.sh  slurm.sh
run/NIC4/: slurm.sh
run/linux/: genCBproject.sh  run.sh
run/macOS/: compile.sh  genCBproject.sh  run.sh
run/windows/: buildCGAL_MSYS2.sh  genCBproject.bat  genCBprojectMSYS2.sh  genCBprojectMSYS2_bis.sh  start.bat
srcs/: CMakeLists.txt  main.cpp  sharedLib_defines.h
srcs/mesh/: CMakeLists.txt  Element.cpp  Element.hpp  Element.inl  Facet.cpp  Facet.hpp  Facet.inl  Mesh.cpp  Mesh.hpp  Mesh.inl  Mesh2D.cpp  Mesh3D.cpp  Node.cpp  Node.hpp  Node.inl  mesh_defines.h
srcs/params/: Params.cpp  Params.hpp
srcs/quadrature/: gausslegendre.hpp
srcs/simulation/: CMakeLists.txt  Equation.cpp  Equation.hpp  Problem.cpp  Problem.hpp  Problem.inl  Solver.cpp  Solver.hpp  Solver.inl  simulation_defines.h
srcs/simulation/extractors/: Extractor.cpp  Extractor.hpp  Extractors.hpp  GMSHExtractor.cpp  GMSHExtractor.hpp  MassExtractor.cpp  MassExtractor.hpp  MinMaxExtractor.cpp  MinMaxExtractor.hpp  PointExtractor.cpp  PointExtractor.hpp
srcs/simulation/matricesBuilder/: MatricesBuilder.cpp  MatricesBuilder.hpp
srcs/simulation/nonLinearAlgo/: NonLinearAlgo.cpp  NonLinearAlgo.hpp  PicardAlgo.cpp  PicardAlgo.hpp
srcs/simulation/physics/: Problems.hpp
srcs/simulation/physics/IncompNewton/: HeatEquation.cpp  HeatEquation.hpp  MomContEquation.cpp  MomContEquation.hpp  Problem.cpp  Problem.hpp  Solver.cpp  Solver.hpp
srcs/simulation/physics/WCompNewton/: ContEquation.cpp  ContEquation.hpp  HeatEquation.cpp  HeatEquation.hpp  MomEquation.cpp  MomEquation.hpp  Problem.cpp  Problem.hpp  Solver.cpp  Solver.hpp
srcs/simulation/utility/: Clock.hpp  SolTable.hpp  StatesFromToQ.hpp  Utility.hpp
srcs/solver/: CMakeLists.txt  Solver.cpp  Solver.hpp  Solver.i  Solver.inl  SolverBoussinesq.cpp  SolverBoussinesq.hpp  SolverBoussinesqWC.cpp  SolverBoussinesqWC.hpp  SolverBoussinesqWC.inl  SolverCompressible.cpp  SolverCompressible.hpp  SolverCompressible.inl  SolverConduction.cpp  SolverConduction.hpp  SolverIncompressible.cpp  SolverIncompressible.hpp  SolverIncompressible.inl  solver_defines.h
srcs/solver/extractors/: Extractor.cpp  Extractor.hpp  Extractors.hpp  GMSHExtractor.cpp  GMSHExtractor.hpp  MassExtractor.cpp  MassExtractor.hpp  MinMaxExtractor.cpp  MinMaxExtractor.hpp  PointExtractor.cpp  PointExtractor.hpp
